# solana-multitool

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
config/: .env.example
examples/: demo_pools.py  demo_swaps.py
go-src/: go.sum
go-src/cmd/getswaps/: main.go
scripts/: build.sh
src/go/: getswaps.go  go.mod
src/python/: config.py  find_pool_creation.py  output_manager.py  pool_creation_scanner.py  solana_swaps.py
src/python/pools/: pool_creation_scanner.py
src/python/swaps/: solana_rpc_utils.py  swap_extractor.py  swap_formatter.py  swap_orchestrator.py
src/solana_multitool/: __main__.py  constants.py
src/solana_multitool/auto_config/: environment.py  logging.py  logging_config.py
src/solana_multitool/pools/: find_creation_tx.py  find_raydium_pool_creation_tx.py  scan_for_log.py  tx_log_scanner.py
src/solana_multitool/swaps/: swap_coindesk.py  swap_extractor.py
src/solana_multitool/utils/: output_manager.py  rate_limiter.py  solana_rpc.py
